# happy-flight

./: .gitignore  README
HF/: HF.sln  Makefile  Makefile.am  configure  configure.ac
HF/HF/: HF.vcxproj  HF.vcxproj.filters  Makefile  Makefile.am  PrefsManager.cpp  PrefsManager.h  Score.cpp  Score.h  Singleton.h  SoundManager.cpp  SoundManager.h  TextureManager.cpp  TextureManager.h  background.cpp  background.h  boundingBox.cpp  boundingBox.h  font.cpp  font.h  game.cpp  game.h  geometry.cpp  geometry.h  item.cpp  item.h  items.cpp  items.h  main.cpp  mainOS.cpp  mainX.cpp  plane.cpp  plane.h  prefs.ini  surfaceDB.cpp  surfaceDB.h  video.cpp  video.h
HF/HF/ofxOsc/libs/oscpack/include/osc/: OscPrintReceivedElements.cpp
HF/HF/ofxOsc/src/: ofConstants.h  ofxOscArg.h  ofxOscReceiver.h
Happy Flight/: Happy Flight.sln
Happy Flight/Happy Flight/: Happy Flight.win32.vcxproj  Happy Flight.win32.vcxproj.filters
Happy Flight/Happy Flight/win32/: resource.h
HappyFlight/: HappyFlight.sln
HappyFlight/HappyFlight/: HappyFlight.win32.vcxproj  HappyFlight.win32.vcxproj.filters
HappyFlight/HappyFlight/Classes/: AppDelegate.cpp
HappyFlight/HappyFlight/win32/: HappyFlight.rc
kinectarrows/: addons.make
kinectarrows/ofxKinectExample.xcodeproj/: project.pbxproj
kinectarrows/ofxKinectExample.xcodeproj/project.xcworkspace/xcuserdata/emmanuel.xcuserdatad/: UserInterfaceState.xcuserstate
kinectarrows/ofxKinectExample.xcodeproj/xcuserdata/emmanuel.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
kinectarrows/src/: main.cpp  testApp.cpp  testApp.h
